@@ -1138,7 +1138,25 @@ name|properties
 operator|.
 name|put
 argument_list|(
+literal|"pom.groupId"
+argument_list|,
+name|organisation
+argument_list|)
+expr_stmt|;
+name|properties
+operator|.
+name|put
+argument_list|(
 literal|"project.artifactId"
+argument_list|,
+name|module
+argument_list|)
+expr_stmt|;
+name|properties
+operator|.
+name|put
+argument_list|(
+literal|"pom.artifactId"
 argument_list|,
 name|module
 argument_list|)
