@@ -24,7 +24,7 @@
   <version>2.0-beta-18</version>
   <dependencies>
     <dependency>
-      <groupId>drools</groupId>
+      <groupId>${pom.groupId}</groupId>
       <artifactId>drools-core</artifactId>
       <version>${pom.version}</version>
     </dependency>
